@@ -1,3 +1,8 @@
+Thu Apr 30 17:02:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* rational.c: Added documentation for rational literal.
+	  [Bug #11075][fix GH-885][ci skip] Patch by @shishir127
+
 Thu Apr 30 16:39:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/socket/ipsocket.c (init_inetsock_internal): preserve errno
